<resources>
    <string name="app_name">ChatClient</string>
    <string name="server_ip">Server IP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="write_m">Написати</string>
    <string name="send">Send</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
